# rpm

./: .cursorrules  .gitignore  Cargo.toml  EXAMPLES.md  README.md  README.ru.md
src/: config.rs  errors.rs  main.rs  models.rs
src/crypto/: key_derivation.rs  mod.rs
src/db/: mod.rs
src/i18n/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
src/tray/: mod.rs
src/tui/: mod.rs  theme.rs
