[package]
name = "rpm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Secure password manager with TUI, system tray, and browser extensions"
license = "MIT OR Apache-2.0"

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.28"
tui-input = "0.8"

# System tray
system-tray = "0.1"
tauri-tray = "0.1"
# Alternative: tray-item = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server for browser extensions
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - strongest available
# AES-GCM for symmetric encryption
aes-gcm = "0.10"
# Argon2 for password hashing
argon2 = "0.5"
# ChaCha20Poly1305 as alternative
chacha20poly1305 = "0.10"
# RSA for asymmetric encryption
rsa = "0.9"
# X25519 for key exchange
x25519-dalek = "2.1"
# Ed25519 for signatures
ed25519-dalek = "2.1"
# Random number generation
rand = "0.8"
rand_core = "0.6"

# Database for storing encrypted passwords
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"


# Secure memory
zeroize = "1.7"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rpm"
path = "src/main.rs"

