[package]
name = "rpm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Secure password manager with TUI, system tray, and browser extensions"
license = "AGPL-3.0"

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.28"

# System tray
system-tray = "0.1"
# Alternative: tray-item = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server for browser extensions
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - strongest available
# AES-GCM for symmetric encryption
aes-gcm = "0.10"
# Argon2 for password hashing
argon2 = "0.5"
# ChaCha20Poly1305 as alternative
chacha20poly1305 = "0.10"
# RSA for asymmetric encryption
rsa = "0.9"
# X25519 for key exchange (pre-release version, will be updated when stable 2.x is available)
x25519-dalek = "3.0.0-pre.3"
# Ed25519 for signatures
ed25519-dalek = "2.1.1"
# Random number generation
rand = "0.8"
rand_core = "0.6"

# Database removed - storage will be implemented later

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
fuzzy-matcher = "0.3"


# Secure memory
zeroize = "1.7"

# Clipboard
arboard = "3.2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rpm"
path = "src/main.rs"

